--- a/ThunderRain/ThunderRain.csproj
+++ b/ThunderRain/ThunderRain.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<!-- provided by RoR2 modding environment -->
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -13,6 +14,19 @@
 		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
 		<PackageReference Include="R2API.Core" Version="5.0.10" />
 		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
-		<Reference Include="..\libs\RiskOfOptions.dll" />
+		<Reference Include="..\libs\RiskOfOptions\2.7.1\RiskOfOptions.dll" />
+
+		<!-- used to compile ThunderRain.dll -->
+		<PackageReference Include="Costura.Fody" Version="5.7.0">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Fody" Version="6.8.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+
+		<!-- compiled with ThunderRain.dll -->
+		<PackageReference Include="System.Text.Json" Version="8.0.0" />
+		<Reference Include="..\libs\System.Buffers\4.5.1\System.Buffers.dll" />
 	</ItemGroup>
 </Project>
