--- a/ReduceRecycler/ReduceRecycler.csproj
+++ b/ReduceRecycler/ReduceRecycler.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>netstandard2.1</TargetFramework>
 		<RestoreProjectStyle>PackageReference</RestoreProjectStyle>
 	</PropertyGroup>
 
@@ -9,10 +9,11 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<!-- Not compiled with these; just here so IDE knows what we're working with -->
 		<PackageReference Include="BepInEx.Core" Version="5.4.21" />
-		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
+		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.1.275-r.0" />
 		<PackageReference Include="R2API.Core" Version="5.0.10" />
-		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
-		<Reference Include="..\libs\RiskOfOptions\2.7.1\RiskOfOptions.dll" />
+		<PackageReference Include="UnityEngine.Modules" Version="2021.3.33" />
+		<Reference Include="..\libs\RiskOfOptions\2.8.1\RiskOfOptions.dll" />
 	</ItemGroup>
 </Project>
