--- a/ReduceRecycler/ReduceRecycler.csproj
+++ b/ReduceRecycler/ReduceRecycler.csproj
@@ -5,15 +5,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<!-- provided by RoR2 modding environment -->
+		<!-- just including for intellisense -->
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<!-- Not compiled with these; just here so IDE knows what we're working with -->
 		<PackageReference Include="BepInEx.Core" Version="5.4.21" />
 		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.1.275-r.0" />
 		<PackageReference Include="R2API.Core" Version="5.0.10" />
 		<PackageReference Include="UnityEngine.Modules" Version="2021.3.33" />
-		<Reference Include="..\libs\RiskOfOptions\2.8.1\RiskOfOptions.dll" />
+		<PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.1" />
 	</ItemGroup>
 </Project>
