--- a/ThunderRain/ThunderRain.csproj
+++ b/ThunderRain/ThunderRain.csproj
@@ -1,32 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>netstandard2.1</TargetFramework>
 		<RestoreProjectStyle>PackageReference</RestoreProjectStyle>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<!-- provided by RoR2 modding environment -->
+		<!-- just including for intellisense -->
 		<PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BepInEx.Core" Version="5.4.21" />
-		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
+		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.1.275-r.0" />
 		<PackageReference Include="R2API.Core" Version="5.0.10" />
-		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
-		<Reference Include="..\libs\RiskOfOptions\2.7.1\RiskOfOptions.dll" />
+		<PackageReference Include="UnityEngine.Modules" Version="2021.3.33" />
+		<PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.1" />
 
-		<!-- used to compile ThunderRain.dll -->
-		<PackageReference Include="Costura.Fody" Version="5.7.0">
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-		<PackageReference Include="Fody" Version="6.8.0">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-
-		<!-- compiled with ThunderRain.dll -->
-		<PackageReference Include="System.Text.Json" Version="8.0.0" />
-		<Reference Include="..\libs\System.Buffers\4.5.1\System.Buffers.dll" />
+		<!-- not provided; include in final .zip -->
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
+		<PackageReference Include="System.Buffers" Version="4.5.1" />
+		<PackageReference Include="System.Memory" Version="4.5.5" />
+		<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+		<PackageReference Include="System.Text.Encodings.Web" Version="8.0.0" />
+		<PackageReference Include="System.Text.Json" Version="8.0.4" />
+		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
 	</ItemGroup>
 </Project>
