--- a/ReduceRecycler/ReduceRecycler.csproj
+++ b/ReduceRecycler/ReduceRecycler.csproj
@@ -13,7 +13,8 @@
 		</PackageReference>
 		<PackageReference Include="BepInEx.Core" Version="5.4.21" />
 		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.1.275-r.0" />
-		<PackageReference Include="R2API.Core" Version="5.0.10" />
+		<PackageReference Include="R2API.Core" Version="5.1.1" />
+		<PackageReference Include="MMHOOK.RoR2" Version="2024.9.5" />
 		<PackageReference Include="UnityEngine.Modules" Version="2021.3.33" />
 		<PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.1" />
 	</ItemGroup>
