--- a/RumbleRain/RumbleRain.csproj
+++ b/RumbleRain/RumbleRain.csproj
@@ -1,29 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>netstandard2.1</TargetFramework>
 		<RestoreProjectStyle>PackageReference</RestoreProjectStyle>
 	</PropertyGroup>
 
+	<!-- provided by RoR2 modding environment -->
+	<!-- just including for intellisense -->
 	<ItemGroup>
-		<!-- provided by RoR2 modding environment -->
 		<PackageReference Include="BepInEx.Core" Version="5.4.21" />
-		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
+		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.1.275-r.0" />
 		<PackageReference Include="R2API.Core" Version="5.0.10" />
-		<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
-		<Reference Include="..\libs\RiskOfOptions\2.7.1\RiskOfOptions.dll" />
+		<PackageReference Include="UnityEngine.Modules" Version="2021.3.33" />
+		<PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.1" />
+	</ItemGroup>
 
-		<!-- used to compile RumbleRain.dll -->
-		<PackageReference Include="Costura.Fody" Version="5.7.0">
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-		<PackageReference Include="Fody" Version="6.8.0">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-
-		<!-- compiled with RumbleRain.dll -->
-		<PackageReference Include="Buttplug" Version="3.0.1" />
-		<PackageReference Include="Buttplug.Client.Connectors.WebsocketConnector" Version="3.0.1" />
-		<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+	<!-- not provided; include in final .zip -->
+	<ItemGroup>
+		<PackageReference Include="Buttplug" Version="4.0.0" />
 	</ItemGroup>
 </Project>
