--- a/LaserScopeCritChance/LaserScopeCritChance.csproj
+++ b/LaserScopeCritChance/LaserScopeCritChance.csproj
@@ -10,10 +10,18 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BepInEx.Core" Version="5.4.21" />
-		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.1.275-r.0" />
-		<PackageReference Include="R2API.Core" Version="5.1.1" />
+		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.4.0-r.0" />
+		<PackageReference Include="R2API.Core" Version="5.2.0" />
 		<PackageReference Include="R2API.RecalculateStats" Version="1.4.0" />
 		<PackageReference Include="R2API.Language" Version="1.0.1" />
 		<PackageReference Include="UnityEngine.Modules" Version="2021.3.33" />
 	</ItemGroup>
+
+	<Import Project="../ror2-mods.targets"/>
+	<ItemGroup>
+		<LanguageFile Include="LaserScopeCritChance.language" />
+	</ItemGroup>
+	<Target Name="CopyLanguageFileToTestingProfile" AfterTargets="PostBuildEvent">
+		<Copy SourceFiles="@(LanguageFile)" DestinationFolder="$(TestingProfile)" />
+	</Target>
 </Project>
