--- a/ReduceRecycler/Thunderstore/thunderstore.toml
+++ b/ReduceRecycler/Thunderstore/thunderstore.toml
@@ -10,7 +10,6 @@ name = "ReduceRecycler"
 description = "Sets Recycler cooldown to instant and adds the cooldown to the run timer. Configurable to only activate after TP event."
 websiteUrl = "https://github.com/quasikyo/ror2-mods/tree/main/ReduceRecycler"
 containsNsfwContent = false
-versionNumber = "1.3.2"
 
 [package.dependencies]
 bbepis-BepInExPack = "5.4.2121"
@@ -20,7 +19,7 @@ Rune580-Risk_Of_Options = "2.8.4"
 [build]
 icon = "./icon.png"
 readme = "../README.md"
-outdir = "../dist"
+outdir = "./dist"
 
 [[build.copy]]
 source = "../bin/Release/netstandard2.1/ReduceRecycler.dll"
