chore: Depend on R2API submodules instead of meta package
Make each mode depend on the used R2API submodule instead of depending
on the meta R2API package which pulls in all ~30 other mods.

While at it, also bump R2API RecalculateStats and Language to their
respective latest versions.

Signed-off-by: Eric Naim <dnaim@cachyos.org>

--- a/LaserScopeCritChance/Thunderstore/thunderstore.toml
+++ b/LaserScopeCritChance/Thunderstore/thunderstore.toml
@@ -13,7 +13,9 @@ containsNsfwContent = false
 
 [package.dependencies]
 bbepis-BepInExPack = "5.4.2121"
-tristanmcpherson-R2API = "5.0.5"
+RiskofThunder-R2API_Core = "5.2.0"
+RiskofThunder-R2API_RecalculateStats = "1.6.5"
+RiskofThunder-R2API_Language = "1.1.0"
 
 [build]
 icon = "./icon.png"
