--- a/ThunderRain/Thunderstore/thunderstore.toml
+++ b/ThunderRain/Thunderstore/thunderstore.toml
@@ -13,7 +13,7 @@ containsNsfwContent = false
 
 [package.dependencies]
 bbepis-BepInExPack = "5.4.2121"
-tristanmcpherson-R2API = "5.0.5"
+RiskofThunder-R2API_Core = "5.2.0"
 Rune580-Risk_Of_Options = "2.8.4"
 
 [build]
